@@ -6,6 +6,7 @@ Change log 1.4 (under development)
 * Fixed a critical bug in the ClassloaderExecutor which prevented it from running methods returning void. This affected the PowerMockRule which prevented it from executing test methods (even though it looked like it did) (issue 268, also closes issue 245)
 * Upgraded to Javassist 3.13 (issue 269)
 * Fixed some problems with Withbox regarding invocation of var args member class constructors and methods (issue 267).
+* Partial mocking of public static methods now works in Mockito (issue 261)
 
 Change log 1.3.9 (2010-07-14)
 ----------------------------------
